--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -1,4 +1,8 @@
-﻿add_executable(spimi spimi.cpp)
-target_compile_features(spimi PRIVATE cxx_std_17)
+﻿add_executable(parse parse.cpp)
+add_executable(merge merge.cpp)
 
-target_link_libraries(spimi PRIVATE msmarco_search_engine)
+target_compile_features(parse PRIVATE cxx_std_17)
+target_compile_features(merge PRIVATE cxx_std_17)
+
+target_link_libraries(parse PRIVATE msmarco_search_engine)
+target_link_libraries(merge PRIVATE msmarco_search_engine)
