Added compressed reading

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,9 @@ if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
     #endif()
 endif()
 
+set(ZLIB_LIBRARY "C:\\zlib-1.2.13\\lib\\zlib.lib")
+set(ZLIB_INCLUDE_DIR "C:\\zlib-1.2.13\\include")
+
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 add_subdirectory(thirdparty)
