Fixed zlib import

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,10 +33,9 @@ if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
     #endif()
 endif()
 
-if (WIN32)
-    set(ZLIB_LIBRARY "C:\\zlib-1.2.13\\lib\\zlib.lib")
-    set(ZLIB_INCLUDE_DIR "C:\\zlib-1.2.13\\include")
-else()
+if(WIN32)
+    set(ZLIB_LIBRARY ${CMAKE_BINARY_DIR}/thirdparty/zlib/zlib.lib)
+    set(ZLIB_INCLUDE_DIR ${CMAKE_BINARY_DIR}/thirdparty/zlib/)
 endif()
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
