--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,7 @@
 [submodule "thirdparty/zlib"]
 	path = thirdparty/zlib
 	url = https://github.com/commontk/zlib
+
+[submodule "thirdparty/Porter2"]
+	path = thirdparty/Porter2
+	url = https://github.com/MrFransis/Porter2
