Fixed encoding issue

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -2,13 +2,16 @@
 add_executable(merge merge.cpp)
 add_executable(compress compress.cpp)
 add_executable(app app.cpp)
+add_executable(query query.cpp)
 
 target_compile_features(parse PRIVATE cxx_std_17)
 target_compile_features(merge PRIVATE cxx_std_17)
 target_compile_features(compress PRIVATE cxx_std_17)
 target_compile_features(app PRIVATE cxx_std_17)
+target_compile_features(query PRIVATE cxx_std_17)
 
 target_link_libraries(parse PRIVATE msmarco_search_engine)
 target_link_libraries(merge PRIVATE msmarco_search_engine)
 target_link_libraries(compress PRIVATE msmarco_search_engine)
 target_link_libraries(app PRIVATE msmarco_search_engine)
+target_link_libraries(query PRIVATE msmarco_search_engine)
