--- a/.gitmodules
+++ b/.gitmodules
@@ -9,3 +9,6 @@
 [submodule "thirdparty/Porter2"]
 	path = thirdparty/Porter2
 	url = https://github.com/MrFransis/Porter2
+[submodule "thirdparty/cli"]
+	path = thirdparty/cli
+	url = https://github.com/daniele77/cli
