Added unit tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,15 +22,8 @@ if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
     # Note this needs to be done in the main CMakeLists
     # since it calls enable_testing, which must be in the
     # main CMakeLists.
-    #include(CTest)
+    include(CTest)
 
-    # Docs only available if this is the main app
-    #find_package(Doxygen)
-    #if(Doxygen_FOUND)
-    #    add_subdirectory(docs)
-    #else()
-    #    message(STATUS "Doxygen not found, not building docs")
-    #endif()
 endif()
 
 if(WIN32)
@@ -46,9 +39,7 @@ add_subdirectory(src)
 
 add_subdirectory(apps)
 
-# Testing only available if this is the main app
-# Emergency override MODERN_CMAKE_BUILD_TESTING provided as well
-if((CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME OR MODERN_CMAKE_BUILD_TESTING)
-   AND BUILD_TESTING)
-    #add_subdirectory(tests)
+option(PACKAGE_TESTS "Build the tests" ON)
+if(PACKAGE_TESTS)
+  add_subdirectory(tests)
 endif()
