--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,6 @@
 	path = thirdparty/cli
 	url = https://github.com/daniele77/cli
 
+[submodule "thirdparty/stxxl"]
+	path = thirdparty/stxxl
+	url = https://github.com/stxxl/stxxl
