--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,10 @@ if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
 
 endif()
 
+if(MSVC)
+    set(CMAKE_CXX_FLAGS_RELEASE  "${CMAKE_CXX_FLAGS} /Ob1")
+endif()
+
 if(WIN32)
     set(ZLIB_LIBRARY ${CMAKE_BINARY_DIR}/thirdparty/zlib/zlib.lib)
     set(ZLIB_INCLUDE_DIR ${CMAKE_BINARY_DIR}/thirdparty/zlib/)
