--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,14 +26,18 @@ if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
 
 endif()
 
-if(MSVC)
-    set(CMAKE_CXX_FLAGS_RELEASE  "${CMAKE_CXX_FLAGS} /Ob1")
-endif()
 
 if(WIN32)
     set(ZLIB_LIBRARY ${CMAKE_BINARY_DIR}/thirdparty/zlib/zlib.lib)
     set(ZLIB_INCLUDE_DIR ${CMAKE_BINARY_DIR}/thirdparty/zlib/)
 endif()
+
+# setup directory informaiton for stxxl library
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/thirdparty/stxxl/include)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/thirdparty/stxxl/build/include)
+LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/thirdparty/stxxl/build/lib)
+# for debug library, use stxxl_debug
+SET(STXXL_LIB stxxl)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
