--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,10 +13,14 @@ add_library(msmarco_search_engine
 
 target_include_directories(msmarco_search_engine PUBLIC ../include ../thirdparty)
 
-#find_package(ZLIB)
+if(UNIX)
+    find_package(ZLIB)
+    find_package(Boost REQUIRED system chrono serialization filesystem iostreams)
+endif()
+
 include_directories(${ZLIB_INCLUDE_DIRS})
 
-target_link_libraries(msmarco_search_engine PUBLIC Boost::boost Boost::chrono Boost::serialization Boost::filesystem Boost::iostreams ${ZLIB_LIBRARIES} Porter2 cli)
+target_link_libraries(msmarco_search_engine PUBLIC Boost::boost Boost::chrono Boost::serialization Boost::filesystem Boost::iostreams ${ZLIB_LIBRARIES} Porter2)
 target_compile_features(msmarco_search_engine PUBLIC cxx_std_17)
 
 file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/tmp)
