--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,8 +1,11 @@
-﻿FetchContent_Declare(
-  catch
+﻿Include(FetchContent)
+
+FetchContent_Declare(
+  Catch2
   GIT_REPOSITORY https://github.com/catchorg/Catch2.git
-  GIT_TAG v2.13.6)
-FetchContent_MakeAvailable(catch)
+  GIT_TAG        v2.13.6)
+
+FetchContent_MakeAvailable(Catch2)
 
 add_executable(compressing_test compressing_test.cpp)
 target_link_libraries(compressing_test PRIVATE msmarco_search_engine Catch2::Catch2)
